@@ -322,7 +322,7 @@ public abstract class CloudletScheduler {
 	 */
 	public Cloudlet getNextFinishedCloudlet() {
 		if (!getCloudletFinishedList().isEmpty()) {
-			return getCloudletFinishedList().removeFirst();
+			return getCloudletFinishedList().remove(0);
 		}
 		return null;
 	}
@@ -346,7 +346,7 @@ public abstract class CloudletScheduler {
 	 * @TODO: Remo Andreoli: No clue why it's removing the first element
 	 */
 	public Cloudlet migrateCloudlet() {
-		Cloudlet cl = getCloudletExecList().removeFirst();
+		Cloudlet cl = getCloudletExecList().remove(0);
 		cl.finalizeCloudlet();
 		return cl;
 	}
@@ -398,9 +398,11 @@ public abstract class CloudletScheduler {
 	 */
 	public double getCurrentRequestedTotalMips() {
 		double mips = 0.0;
-		if (currentMipsShare != null)
-			for (double v : currentMipsShare)
+		if (currentMipsShare != null) {
+			for (double v : currentMipsShare) {
 				mips += v;
+			}
+		}
 		return mips;
 	}
 
